--- a/lab15/hw15.Rmd
+++ b/lab15/hw15.Rmd
@@ -26,22 +26,23 @@ library(dplyr)
 
 1.
 ```{r}
-blood_count <- read_csv("data/blood_count.csv")
+blood_count <- read_csv("data/blood_count_dataset.csv") #check the name of the csv file
 ```
 
 2. 
 ```{r}
-glmpse(blood_count)
+glimpse(blood_count) #miss spell the function name
 
 ```
 
 3. 
 ```{r}
 blood_count %>% 
+  clean_names() %>% #need clean names before analyze tidy data. 
   group_by(gender) %>% 
-  summarize(min=min(red_blood_cells)
-            mean=maen(red_blood_cells),
-            max=max(red_blood_cells)
+  summarize(min=min(red_blood_cells),
+            mean=mean(red_blood_cells),#miss spell mean function
+            max=max(red_blood_cells)) #need end parenthesis for function 'summarize'
 ```
 
 
